<resources>

    <string name="app_name">DrawMeUp</string>
    <string name="welcome_message">Are you ready to DrawMeUp?</string>
    <string name="uri_forgot_password">https://drawmeup.com</string>"

    <!-- LABELS -->
    <string name="title_home">Home</string>
    <string name="title_conversations">Conversations</string>
    <string name="title_profile">Profile</string>
    <string name="remove_comment">Remove comment</string>
    <string name="logout">Logout</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="nickname">Nickname</string>
    <string name="post_name">Post title</string>
    <string name="post_description">Post description</string>
    <string name="post_tags">Tags</string>
    <string name="type_to_search">Type to search…</string>
    <string name="post_image">Post image</string>
    <string name="like">Like button</string>
    <string name="user_avatar">User avatar</string>
    <string name="comment">Comment</string>
    <string name="write_comment">Write a comment…</string>
    <string name="send_comment">Send comment</string>">
    <string name="start_new_conversation">New conversation</string>
    <string name="write_message">Write message…</string>
    <string name="send_message">send_message</string>

    <!-- LOGIN AND REGISTER -->
    <string name="invalid_credentials">Invalid credentials!</string>
    <string name="nickname_length_error">Nickname must be at least 3 characters long</string>
    <string name="email_regex_error">Invalid email address</string>
    <string name="password_length_error">Password must be at least 8 characters long</string>
    <string name="email_in_use_error">This email is already in use</string>
    <string name="nickname_in_use_error">This nickname is already in use</string>

    <!-- BUTTONS -->
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="edit_button">Edit</string>
    <string name="add_button">Add</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="sign_in_button">Sign in</string>
    <string name="sign_up_button">Sign up</string>
    <string name="post_add_button">Add post</string>
    <string name="reset_password_button">Forgot password?</string>

    <!-- MESSAGES -->
    <string name="message_sent">Message sent!</string>
    <string name="message_template">Start chatting with your friend!</string>
    <string name="user_do_not_exists">User does not exists!</string>
    <string name="conversation_exists">Conversation already exists!</string>
    <string name="conversation_created">Conversation created!</string>
    <string name="comment_added">Comment added!</string>
    <string name="confirm_comment_removal_warning">Are you sure, you want to delete this comment?</string>
    <string name="delete_not_own_comment_warning">You cannot remove comments that you did not created!</string>
    <string name="logout_confirm_warning">Are you sure you want to logout?</string>

    <!-- PHOTO RESOURCES -->
    <string name="draw_me_up_logo">DrawMeUp Logo</string>

</resources>